@@ -11,6 +11,9 @@ Changelog
 - Fixed an issue where PyFITS allowed newline characters in header values and
   comments. (Backported from 3.2.3)
 
+- Fixed pickling of ``FITS_rec`` (table data) objects.
+  (Backported from 3.2.3)
+
 
 3.1.5 (2014-03-28)
 ------------------
